# dev-video-feed

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  cache.py  classification.py  config.py  feeds.py  filtering.py  main.py  models.py  scoring.py  youtube_data.py
tests/: test_classification.py  test_feed_parsing.py  test_filtering.py  test_http_headers.py  test_scoring.py  test_youtube_data.py
tests/fixtures/: youtube_feed_sample.xml  youtube_videos_response.json
